feat: monitor summary
