# docs/swagger.json
@@ -407,6 +407,45 @@
         ]
       }
     },
+    "/api/monitors/summary/{id}": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MonitorSummary"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Monitor ID",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "string",
+              "description": "Monitor ID"
+            }
+          }
+        ]
+      }
+    },
     "/api/monitors/update/{id}": {
       "put": {
         "responses": {
@@ -611,6 +650,9 @@
             "type": "string",
             "format": "date-time"
           },
+          "status_code": {
+            "type": "string"
+          },
           "status": {
             "type": "string"
           },
@@ -707,6 +749,9 @@
                   "type": "string",
                   "format": "date-time"
                 },
+                "status_code": {
+                  "type": "string"
+                },
                 "status": {
                   "type": "string"
                 },
@@ -718,6 +763,20 @@
                 }
               }
             }
+          }
+        }
+      },
+      "MonitorSummary": {
+        "type": "object",
+        "properties": {
+          "averageLatency": {
+            "type": "number"
+          },
+          "dayUptime": {
+            "type": "number"
+          },
+          "monthUptime": {
+            "type": "number"
           }
         }
       },
@@ -761,6 +820,9 @@
                       "timestamp": {
                         "type": "string",
                         "format": "date-time"
+                      },
+                      "status_code": {
+                        "type": "string"
                       },
                       "status": {
                         "type": "string"
